<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" tools:context=".winds"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/a1"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/a2"
        android:layout_margin="10dp"
        />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a3"

            android:layout_margin="10dp"/>


        ></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a4"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a5"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a6"

            android:layout_margin="10dp"/>


        ></LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
        <TextView
            android:id="@+id/textView514"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a7"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a8"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a9"

            android:layout_margin="10dp"/>


        ></LinearLayout>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="@drawable/edittext"
        />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@drawable/edittext"
        android:text="Name" />
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
      <Button
          android:id="@+id/kai"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="开启action bar"></Button>

      <Button
          android:id="@+id/guan"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="关闭action bar"></Button>

  </LinearLayout>

</LinearLayout>